Bug 159089 - Changing an object color in Draw or Impress crashes LO
Summary: Changing an object color in Draw or Impress crashes LO
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 beta1+
Hardware: x86-64 (AMD64) macOS (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:24.2.0
Keywords: bibisected, bisected, regression
: 159090 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-09 14:49 UTC by Vincent Boudry
Modified: 2024-04-01 12:03 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
macOS crash log (73.87 KB, text/plain)
2024-01-10 01:00 UTC, Patrick (volunteer)
Details
backtrace with Orca on Linux with qt6 VCL plugin (20.86 KB, text/plain)
2024-01-11 11:16 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vincent Boudry 2024-01-09 14:49:18 UTC
Description:
Changing the color (line or area) of any object make LO crashing

Steps to Reproduce:
1.Create a draw or impress file
2.Insert a line or a draw object 
3.Change the color of the line / area (by menu or property editor)

Actual Results:
Crash of LO.
The recovered file has the object color changed.

Expected Results:
Color changed without crash


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 5f390384195b7264c6e52add9e90a39790285249
CPU threads: 4; OS: macOS 13.6.3; UI render: default; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 m_a_riosv 2024-01-09 15:27:49 UTC
Please test with skia enable, on the view preferences.
Comment 2 Vincent Boudry 2024-01-09 16:01:22 UTC
All the same (Skia enabled but not forced) 
but now LO is stuck in the middle of saving the file, and the color change is not taken into account after the file recovery.

Version: 24.2.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 5f390384195b7264c6e52add9e90a39790285249
CPU threads: 4; OS: macOS 13.6.3; UI render: Skia/Metal; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 3 Julien Nabet 2024-01-09 19:42:20 UTC
Would it be possible you retrieve extra information? (see https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#macOS:_How_to_get_debug_information)
Comment 4 Patrick (volunteer) 2024-01-10 01:00:41 UTC
Created attachment 191832 [details]
macOS crash log
Comment 5 Patrick (volunteer) 2024-01-10 01:04:55 UTC
I can reproduce the crash in my local master build. My crash log is in attachment https://bugs.documentfoundation.org/attachment.cgi?id=191832 but I will need to do more debugging to see if I can find the cause of this crash.

Version: 24.8.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: ef6ff2df2e1286974da2f344aa3b8e3ae9093a79
CPU threads: 8; OS: macOS 14.2.1; UI render: Skia/Metal; VCL: osx
Locale: en-CA (en_CA.UTF-8); UI: en-US
Calc: threaded
Comment 6 Telesto 2024-01-10 06:59:56 UTC
*** Bug 159090 has been marked as a duplicate of this bug. ***
Comment 7 Patrick (volunteer) 2024-01-10 23:00:53 UTC
OK. Did a bisect and the following commit is where the crashing started. The crash is in the macOS accessibility handling code so I'll take a look at that commit and see if I can determine what needs to be done to fix this crash:
 2f5e7a07775690e57d639eeca7a1e41733fa93a9 is the first bad commit
commit 2f5e7a07775690e57d639eeca7a1e41733fa93a9
Author: Michael Weghorn <m.weghorn@posteo.de>
Date:   Thu Sep 7 08:09:31 2023 +0200
Comment 8 Michael Weghorn 2024-01-11 11:16:36 UTC
Created attachment 191872 [details]
backtrace with Orca on Linux with qt6 VCL plugin

I can reproduce an assert with the qt6 VCL plugin on Linux as well when Orca is running, backtrace attached. (It's somewhat similar to the macOS one, but asserts at a different place.)
Comment 9 Commit Notification 2024-01-14 11:52:25 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/563f7077f1dbce31ff95ee8d2e8d17b629693db1

tdf#159089 dispose custom accessible here and unset for `m_xDrawingArea`

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Patrick (volunteer) 2024-01-14 12:05:40 UTC
The fix should be in tomorrow's (15 January 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for testers: the nightly master builds install in /Applications/LibreOfficeDev.app. These builds are not codesigned like regular LibreOffice releases so you will need to execute the following Terminal command after installation:

xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 11 Commit Notification 2024-01-14 19:23:04 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/753981dd0cbbdedeca4fa95681f6d65d370a758f

tdf#159089 dispose custom accessible here and unset for `m_xDrawingArea`

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-01-14 22:21:21 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-0":

https://git.libreoffice.org/core/commit/a93cd8a77777e9704617d82db2d421154de3ff92

tdf#159089 dispose custom accessible here and unset for `m_xDrawingArea`

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Vincent Boudry 2024-01-16 08:48:11 UTC
I have been using the daily version from the 15th for a couple of hours now, without crash.
Comment 14 steve 2024-01-16 12:22:57 UTC
verified as per comment 13