tdf#159089 dispose custom accessible here and unset for `m_xDrawingArea`

rather than waiting for `m_xDrawingArea` to get disposed, to prevent
unsafe use of the now potentially non-functional accessible until it
gets disposed with the VclDrawingArea

Change-Id: I5b8720ac4d5ed41cb1775b0142b17d198e9f036d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161903
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@libreoffice.org>
(cherry picked from commit 244bd399732017615bab2c34c2b29d6a80d27ae9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162006
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>